# Multimodal-Math-Mentor

./: .env.example  README.md  graph.py  main.py  pyproject.toml  requirements.txt
agents/: critic_agent.py  hitl_node.py  intent_router_agent.py  llm.py  parser_agent.py  solver_agent.py  state.py  tutor_agent.py
knowledge_base/: 01_quadratic_equations.txt  02_complex_numbers.txt  03_matrices_determinants.txt  04_differential_calculus.txt  05_integral_calculus.txt  06_vectors_3d_geometry.txt  07_coordinate_geometry_2d.txt  08_conic_sections.txt  09_trigonometry.txt  10_probability_combinatorics.txt
utils/: asr.py  memory_bank.py  ocr.py  rag.py
